force-app/main/default/objects/Survey_Version__c/Survey_Version__c.object-meta.xml
<CustomObject>
    <label>Survey Version</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Survey Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Version</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>