force-app/main/default/objects/Survey_Version__c/fields/CS_Survey_Version_Key__c.field-meta.xml
<CustomField>
    <fullName>CS_Survey_Version_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Survey Version Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>