force-app/main/default/objects/Survey_Version__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark</label>
    <length>80</length>
    <type>Text</type>
</CustomField>