force-app/main/default/objects/Survey_Version__c/fields/Survey_Manager__c.field-meta.xml
<CustomField>
    <fullName>Survey_Manager__c</fullName>
    <label>Survey Manager</label>
    <referenceTo>Survey_Manager__c</referenceTo>
    <relationshipLabel>Survey Version</relationshipLabel>
    <relationshipName>Survey_Version</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>