force-app/main/default/objects/Survey_Version__c/fields/version__c.field-meta.xml
<CustomField>
    <fullName>version__c</fullName>
    <label>version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>